# ariamousetosa

./: .gitignore  CMakeLists.txt  SConstruct  license.txt  newTODO.md
include/Midi/Players/: PlatformMidiManager.h
src/Actions/: DeleteSelected.h
src/GUI/: MainFrame.cpp
src/IO/: AriaFileWriter.cpp
src/Midi/Players/: PlatformMidiManager.cpp
src/Printing/SymbolPrinter/PrintLayout/: PrintLayoutMeasure.cpp  RelativePlacementManager.cpp
src/Renderers/: Drawable.h  wxDCString.cpp
